# MultiViPerFrOG

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yaml  package.xml
config/: config.yaml
docker/: cpu.Dockerfile
docker/submodules/: install_nanoflann.sh  ros_1.sh  set_locale.sh
include/multiviperfrog/config/: ceres_config.h  experiment_config.h  optimization_data.h
include/multiviperfrog/core/: experiment_module.h  workflow_manager.h
include/multiviperfrog/core/optimization/: optimization.h  problems.h
include/multiviperfrog/core/optimization/cost_functions/: RCM_constraint_errorterm.h  SF_knowledge_errorterm.h  Tf_and_staticlabels_from_correspondences_errorterm.h  Tf_and_staticlabels_from_correspondences_errorterm_explicit_SF.h  Tf_chain_errorterm.h  Tf_measured_errorterm.h  cost_function1.h  data_association_errorterm.h  odo_and_trueflow_from_biasedflow_errorterm_a.h  odo_and_trueflow_from_biasedflow_errorterm_b.h  odo_and_trueflow_from_biasedflow_errorterm_b_with_RCM.h  odo_and_trueflow_from_biasedflow_plus_labels_errorterm.h  odo_from_rigidTf1_errorterm.h
include/multiviperfrog/core/postprocessing/: postprocessing.h
include/multiviperfrog/core/preprocessing/: preprocessing.h
include/multiviperfrog/interfaces/: RosDataProcessor.h  RosOnlineDataProcessor.h  RosRosbagDataProcessor.h  helpers_ros.h  holoscan_input_adapter.h  holoscan_output_adapter.h  input_interface.h  offline_input_adapter.h  output_interface.h  ros_input_adapter.h  ros_output_adapter.h
include/multiviperfrog/utils/: KDTreeFlann.h  data_conversions.h  evaluation.h  optimization_utils.h  preprocessing_utils.h  ros_visualization.h
launch/: vis_multicamera_optimization.launch  vis_odometry_cam1.launch  vis_odometry_cam2.launch  vis_play_input_data.launch
rviz/: Input_data_from_blender.rviz  deformable_odometry_cam1_noSF_noTraj.rviz  deformable_odometry_cam2_noSF_noTraj.rviz  multicamera_optimization_noSF_noTraj.rviz
src/: multiviperfrog_node.cpp
src/core/: experiment_module.cpp  workflow_manager.cpp
src/core/optimization/: optimization.cpp  problems.cpp
src/core/optimization/cost_functions/: cost_function1.cpp
src/core/postprocessing/: postprocessing.cpp
src/core/preprocessing/: preprocessing.cpp
src/interfaces/: RosDataProcessor.cpp  RosOnlineDataProcessor.cpp  RosRosbagDataProcessor.cpp  helpers_ros.cpp  holoscan_input_adapter.cpp  holoscan_output_adapter.cpp  offline_input_adapter.cpp  ros_input_adapter.cpp  ros_output_adapter.cpp
src/utils/: KDTreeFlann.cpp  data_conversions.cpp  optimization_utils.cpp  preprocessing_utils.cpp
test/: test_docker_builds_cpu.sh
